Fixed too thin fonts on mobile using "font-weight" css properity.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,7 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
+    font-weight: 400;
 }
 
 p {
@@ -47,6 +48,7 @@ img {
 
 figcaption {
   text-align: center;
+  font-weight: 300;
 }
 
 /**
