--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -60,6 +60,7 @@ html, body {
         color: $theme-color1;
     }
     .site-nav-brand-title {
+      font-weight: 500;
       font-size:2rem;
       line-height:2rem;
       margin: auto 0;
